# kcwsh

./: .gitignore  .kateproject  CMakeLists.txt  Doxyfile  Mainpage.dox  TODO  clienthandler.cpp  clienthandler.h  consoleinputreader.cpp  consoleinputreader.h  consoleoutputwriter.cpp  consoleoutputwriter.h  dllmain.cpp  hooks.cpp  hooks.h  inputreader.cpp  inputreader.h  inputwriter.cpp  inputwriter.h  kcwapp.cpp  kcwapp.h  kcweventloop.cpp  kcweventloop.h  kcwinjector.cpp  kcwinjector.h  kcwprocess.h  kcwsh_export.h  kcwsharedmemory.h  kcwthread.cpp  kcwthread.h  main.cpp  outputreader.cpp  outputreader.h  outputwriter.cpp  outputwriter.h  pipehandler.cpp  pipehandler.h  remoteexec.cpp  remoteexec.h  serverhandler.cpp  (+4 more)
.kateproject.d/: notes.txt
cmake/: KcwSHConfig.cmake  KcwSHConfigVersion.cmake.in
doc/: Doxyfile.in
examples/: CMakeLists.txt
examples/cmd/: CMakeLists.txt  consoleinputreader.cpp  consoleinputreader.h  consoleoutputwriter.cpp  consoleoutputwriter.h  consoleterminal.cpp  consoleterminal.h  main.cpp
examples/qt/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
frontends/: CMakeLists.txt
frontends/qt/: CMakeLists.txt  cmd.exe-html-color-codes.txt  qinputreader.cpp  qinputreader.h  qoutputwriter.cpp  qoutputwriter.h  qterminalwidget.cpp  qterminalwidget.h  qterminalwidget_p.h
kcw/: CMakeLists.txt  Doxyfile  Mainpage.dox  kcwapp.cpp  kcwapp.h  kcwdebug.cpp  kcwdebug.h  kcweventloop.cpp  kcweventloop.h  kcwinjector.cpp  kcwinjector.h  kcwprocess.cpp  kcwprocess.h  kcwsharedmemory.h  kcwthread.cpp  kcwthread.h  kcwthreadrep.cpp  kcwthreadrep.h
kcw/doc/: Doxyfile
kcw/tests/: CMakeLists.txt  commoninjectiondll.cpp  debugtest.cpp  injectortest.cpp  sharedmemorytest.cpp
kcwshtest/: CMakeLists.txt  main.cpp  mywidget.cpp  mywidget.h
tests/: CMakeLists.txt  processtester.cpp  readoutputbuffertest.cpp  scrolltester.cpp  terminaltest.cpp  testinjectiondll.cpp  threadtest.cpp  titletester.cpp
